Fix minus icon not showing in work accordion

--- a/work/index.css
+++ b/work/index.css
@@ -362,6 +362,9 @@ li {
   max-height: 0rem;
 }
 
+.hidden {
+  display: none;
+}
 /* Job Accordion end */
 
 /* Goal text start */
